# contractforge

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  api-result.html  compatibility.html  concepts.html  contract-access.html  contract-annotations.html  contract-ingestion.html  contract-operations.html  contracts.html  examples.html  extending.html  full-contract.html  governance.html  idempotency.html  index.html  merge-strategies.html  operations.html  pyproject.toml  quality.html  quickstart.html  reference.html  schema-policy.html  sitemap.xml  transformations.html  troubleshooting.html  watermarks.html  write-modes.html
adapters/aws/: CHANGELOG.md  README.md  pyproject.toml
adapters/aws/src/contractforge_aws/: __init__.py  adapter.py  api.py  contract_extensions.py  deployment_api.py  environment.py  glue_job_definition.py  runtime_args.py  schema_columns.py  subtargets.py  validation.py
adapters/databricks/: CHANGELOG.md  README.md  pyproject.toml
adapters/databricks/src/contractforge_databricks/: __init__.py  adapter.py  api.py  cli.py  cli_deploy.py  cli_governance.py  cli_io.py  cli_maintenance.py  cli_stabilization.py  cli_standard.py  coercion.py  contract_extensions.py  environment.py  results.py
adapters/fabric/: CHANGELOG.md  PARITY.md  README.md  pyproject.toml
adapters/fabric/src/contractforge_fabric/: __init__.py  adapter.py  api.py  cli.py  contract_extensions.py  diagnostics.py  environment.py  naming.py  sql.py  stabilization.py  subtargets.py
adapters/gcp/: CHANGELOG.md  README.md  pyproject.toml
adapters/gcp/src/contractforge_gcp/: __init__.py  adapter.py  api.py  cli.py  diagnostics.py  environment.py  source_promotion.py  source_review.py  sources.py  stabilization.py  subtargets.py
adapters/snowflake/: CHANGELOG.md  README.md  pyproject.toml
adapters/snowflake/src/contractforge_snowflake/: __init__.py  adapter.py  api.py  connection_options.py  contract_extensions.py  environment.py  polling.py  session_ops.py  sql.py  subtargets.py  values.py
ai/: CHANGELOG.md  README.md  pyproject.toml
ai/databricks_tests/: full_project_artifact_validation.py  intelligence_complex_workflows.py  provider_backed_generation_smoke.py
ai/docs/: agent-instructions.md  architecture.md  aws-project-generation.md  ci.md  connection-yaml.md  contract-generation.md  databricks.md  enrichment-evaluation.md  environment-yaml.md  evaluation.md  evidence.md  getting-started.md  new-contractforge-structure.md  observability.md  onboarding.md  platform-parity-analysis.md  project-generation.md  project-planning.md  project-structure-validation.md  project-yaml-generation.md  prompt-evaluation.md  providers.md  security.md  shape.md  suggestions.md
ai/src/contractforge_ai/: __init__.py  cli.py  cli_context_commands.py  cli_generation_helpers.py  cli_io.py  cli_onboarding_commands.py  cli_output.py  cli_parser.py  cli_payload.py  cli_project_generation.py  cli_prompt_evaluation.py  cli_validation_commands.py  cli_workflows.py  connectors.py  models.py  reports.py  reports_translation.py  write_modes.py
ai/src/contractforge_ai/adapter_validation/: __init__.py  models.py  registry.py  validation.py
ai/src/contractforge_ai/agentic/: __init__.py  context.py  generate.py  governance.py  intent.py  models.py  planning.py  transform.py
ai/src/contractforge_ai/context/: __init__.py  databricks.py  knowledge.py  loaders.py  project.py  redaction.py
ai/src/contractforge_ai/enrichment/: __init__.py  core.py
ai/src/contractforge_ai/evaluation/: __init__.py  enrichment_quality.py  prompts.py  provider_live.py  structured.py
ai/src/contractforge_ai/explainers/: __init__.py  failure.py
ai/src/contractforge_ai/generators/: __init__.py  contract.py  environments.py  metadata.py  project.py  shape.py  targets.py
ai/src/contractforge_ai/integrations/: __init__.py  contractforge_naming.py
ai/src/contractforge_ai/intelligence/: __init__.py  critique.py  routing.py
ai/src/contractforge_ai/observability/: __init__.py  control_tables.py
ai/src/contractforge_ai/onboarding/: __init__.py  agent_assets.py  discovery.py  init.py  profiles.py  provider_credentials.py
ai/src/contractforge_ai/parity/: __init__.py  models.py  platforms.py
ai/src/contractforge_ai/planning/: __init__.py  platforms.py  project.py  spec.py
ai/src/contractforge_ai/project_structure/: __init__.py  findings.py  io.py  models.py  validation.py
ai/src/contractforge_ai/projects/: __init__.py  artifact_policy.py  guided.py  loaders.py  models.py  patching.py  siblings.py  writer.py
ai/src/contractforge_ai/prompts/: contract_reviewer.md
ai/src/contractforge_ai/providers/: __init__.py  anthropic.py  base.py  bedrock.py  capabilities.py  databricks.py  deepseek.py  env.py  factory.py  gemini.py  (+3 more)
ai/tests/: conftest.py  test_agent_assets.py  test_agentic_generation.py  test_agentic_generation_fixtures.py  test_agentic_transform.py  test_architecture_boundaries.py  test_architecture_review.py  test_cli.py  test_connector_catalog_awareness.py  test_contract_generator.py  test_contractforge_project_generator.py  test_contractforge_validation_adapter.py  test_databricks_collector.py  test_databricks_generation_smoke_notebook.py  test_enriched_project_spec.py  test_enrichment.py  test_enrichment_quality.py  test_failure_explainer.py  test_generated_validation.py  test_golden_fixtures.py  test_guided_project_intelligence.py  test_intelligence_critique.py  test_intelligence_routing.py  test_intelligence_workflow_fixtures.py  test_knowledge_index.py  test_metadata_generator.py  test_observability_control_tables.py  test_onboarding_discovery.py  test_onboarding_init.py  test_onboarding_profiles.py  test_platform_parity.py  test_project_artifacts.py  test_project_context.py  test_project_patching.py  test_project_planner.py  test_project_structure_validation.py  test_prompt_evaluation.py  test_provider_capabilities.py  test_provider_live_evaluation.py  test_provider_routing.py  (+10 more)
ai/tests/fixtures/: agentic_generation_cases.json
(+2250 files in other folders)
