[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractforge-core"
version = "0.2.0"
description = "Platform-neutral semantic core for contract-first data ingestion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContractForge contributors" }]
keywords = ["contractforge", "data-contracts", "ingestion", "data-platform", "lakehouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["eval-type-backport>=0.2", "pydantic>=2.7", "PyYAML>=6"]

[project.urls]
Homepage = "https://github.com/marquesantero/contractforge"
Documentation = "https://marquesantero.github.io/contractforge/"
Repository = "https://github.com/marquesantero/contractforge"
Issues = "https://github.com/marquesantero/contractforge/issues"
Changelog = "https://github.com/marquesantero/contractforge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15"]

[project.scripts]
contractforge = "contractforge_core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src", "adapters/databricks/src", "adapters/aws/src", "adapters/snowflake/src", "adapters/fabric/src", "adapters/gcp/src"]

[tool.ruff]
target-version = "py310"
extend-exclude = ["build", "dist", ".tmp"]

[tool.ruff.lint]
# Explicit form of Ruff's default selection: pyflakes (F) plus the
# always-safe pycodestyle error groups. This gates undefined names (F821),
# unused imports (F401) and empty f-strings (F541) so they cannot recur.
select = ["E4", "E7", "E9", "F"]

[tool.hatch.build.targets.wheel]
packages = ["src/contractforge_core"]

[tool.hatch.build.targets.sdist]
include = ["/src/contractforge_core", "/docs", "/README.md", "/CHANGELOG.md", "/pyproject.toml"]
