[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contractforge-ai"
version = "0.3.0"
description = "AI-assisted review, diagnostics and contract generation tools for ContractForge."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ContractForge contributors" }]
keywords = ["contractforge", "databricks", "lakehouse", "data-contracts", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "contractforge-core>=0.2,<0.3",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
aws = ["boto3>=1.34"]
databricks = ["contractforge-databricks>=0.2,<0.3"]
aws-adapter = ["contractforge-aws>=0.2,<0.3"]
snowflake-adapter = ["contractforge-snowflake>=0.2,<0.3"]
fabric-adapter = ["contractforge-fabric>=0.2,<0.3"]
gcp-adapter = ["contractforge-gcp>=0.2,<0.3"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "build>=1.0",
]

[project.scripts]
contractforge-ai = "contractforge_ai.cli:main"

[project.urls]
Homepage = "https://github.com/marquesantero/contractforge/tree/main/ai"
Documentation = "https://marquesantero.github.io/contractforge/"
Repository = "https://github.com/marquesantero/contractforge"
Issues = "https://github.com/marquesantero/contractforge/issues"
Changelog = "https://github.com/marquesantero/contractforge/blob/main/ai/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contractforge_ai = ["prompts/*.md"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
