[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractforge-databricks"
version = "0.2.0"
description = "Databricks adapter for ContractForge Core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContractForge contributors" }]
keywords = ["contractforge", "databricks", "data-contracts", "ingestion", "lakehouse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["contractforge-core>=0.2,<0.3"]

[project.urls]
Homepage = "https://github.com/marquesantero/contractforge/tree/main/adapters/databricks"
Documentation = "https://marquesantero.github.io/contractforge/docs/adapters/databricks"
Repository = "https://github.com/marquesantero/contractforge"
Issues = "https://github.com/marquesantero/contractforge/issues"
Changelog = "https://github.com/marquesantero/contractforge/blob/main/adapters/databricks/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
contractforge-databricks = "contractforge_databricks.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contractforge_databricks"]

[tool.hatch.build.targets.sdist]
include = ["/src/contractforge_databricks", "/README.md", "/CHANGELOG.md", "/pyproject.toml"]
