[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractforge-fabric"
version = "0.2.0"
description = "Microsoft Fabric adapter for ContractForge Core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContractForge contributors" }]
keywords = ["contractforge", "microsoft-fabric", "onelake", "lakehouse", "data-contracts", "ingestion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["contractforge-core>=0.2,<0.3"]

[project.urls]
Homepage = "https://github.com/marquesantero/contractforge/tree/main/adapters/fabric"
Documentation = "https://marquesantero.github.io/contractforge/docs/adapters/fabric"
Repository = "https://github.com/marquesantero/contractforge"
Issues = "https://github.com/marquesantero/contractforge/issues"
Changelog = "https://github.com/marquesantero/contractforge/blob/main/adapters/fabric/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8"]
runtime = []

[project.scripts]
contractforge-fabric = "contractforge_fabric.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contractforge_fabric"]

[tool.hatch.build.targets.sdist]
include = ["/src/contractforge_fabric", "/README.md", "/CHANGELOG.md", "/pyproject.toml"]
