[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractforge-snowflake"
version = "0.2.0"
description = "Snowflake adapter for ContractForge Core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ContractForge contributors" }]
keywords = ["contractforge", "snowflake", "data-contracts", "ingestion", "warehouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["contractforge-core>=0.2,<0.3"]

[project.urls]
Homepage = "https://github.com/marquesantero/contractforge/tree/main/adapters/snowflake"
Documentation = "https://marquesantero.github.io/contractforge/docs/adapters/snowflake"
Repository = "https://github.com/marquesantero/contractforge"
Issues = "https://github.com/marquesantero/contractforge/issues"
Changelog = "https://github.com/marquesantero/contractforge/blob/main/adapters/snowflake/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8"]
runtime = ["snowflake-connector-python>=3"]
snowpark = ["snowflake-snowpark-python>=1"]

[project.scripts]
contractforge-snowflake = "contractforge_snowflake.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contractforge_snowflake"]

[tool.hatch.build.targets.sdist]
include = ["/src/contractforge_snowflake", "/README.md", "/CHANGELOG.md", "/pyproject.toml"]
